# Helios-Quant-Core

./: .env.example  .gitignore  .pre-commit-config.yaml  DATA_PAPER_TRADING.md  EXPERIMENT_CONTRACT.md  Makefile  README.md  ROADMAP.md  THEORY.md  VISION.md  debug_agent.py  pyproject.toml  run_audit_meteo.py  run_benchmark.py  run_gamma_sensitivity.py  run_normal_benchmark.py  run_paper_health_check.py  run_paper_tear_sheet.py  run_paper_trader.py  run_preflight_check.sh  run_reconciler.py  tune_epsilon.py
.github/workflows/: ci.yml  paper-orchestrator.yml  paper-reconciler.yml
.mypy_cache/3.10/: typing.data.json  typing_extensions.data.json  zipimport.data.json
.mypy_cache/3.10/zipfile/: __init__.data.json
data/: epex_2022_crisis.parquet
data/paper/: paper_pnl_log.csv  trades_log.csv
docs/: ARCHITECTURE_PAPER_TRADING.md  ARCHITECTURE_PRICE_FORECASTER.md  AUDIT_HELIOS_QUANT_CORE.md  AUDIT_SCENARIO_GENERATOR.md  PROMPT_LIGHTGBM_FORECASTER.md  TEAR_SHEET_INTERPRETATION.md
docs/strategy/: 01_model_limits_and_assumptions.md  02_investor_faq.md  03_investment_memorandum.md
docs/vision/: AUDIT_FEASIBILITY_STRATEGIC.md  STRATEGIC_ORCHESTRATION_MANIFESTO.md
scripts/: crontab.example
src/helios_core/: exceptions.py
src/helios_core/assets/: battery.py  config.py
tests/assets/: test_battery.py
tests/data/: test_entsoe_loader_fail_fast.py
tests/optimization/: test_controller.py  test_scaler_range.py  test_scaling.py
tests/simulate/: test_backtester.py
tests/stochastic/: test_generator.py  test_price_forecaster.py  test_regime.py
(+21 files in other folders)
